--- a/Amination page.html
+++ b/Amination page.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="/C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\favicon.png">
+  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png">
 <style>
 
 body {
@@ -122,8 +122,8 @@ li.dropdown {
  </form>
  
  <ul>
-  <li><a href="movies theatre.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
-  <li><a href="index.html" class="active">Home</a></li>
+  <li><a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="movies theatre.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
   <a href="movies theatre.html" class="dropbtn">Genre</a>
@@ -141,7 +141,7 @@ li.dropdown {
 <div class="container">
  
  <div class="amination">
- <img src="kung fu panda.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\kung fu panda.jpg">
  <div class="r" style="color: red">KUNG FU PANDA</div>
  <div class="p">Protecting his family against terrorist is the master of Kung, Kung Fu Panda.The master won't let anything bad happen to his family while his is still alive<br>Duration: 1hr 35mins<br>PG: 16L<br>Cast: Smalling Opera, Tom Halland</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -149,7 +149,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="rango.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\rango.jpg">
  <div class="r" style="color: red">RANGO</div>
  <div class="p">Rango is an ambitious man who tries to develop his village but people hate him and cannot listen to what he has to say, so he is alone in this hard mission.<br>Duration: 1hr 55mins<br>PG: 13L<br>Cast: Reyka Sam, Hardy Potter</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -157,7 +157,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="rena.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\rena.jpg">
  <div class="r" style="color: red">BRIDGE OF SPIRITS</div>
  <div class="p">A girl grows up being taught how to hunt using her bow and arrow. Now comes a time whe she should use them to protect her people aganist a bunch thieves trying to steal their food.<br>Duration: 2hrs 05mins<br>PG: 16VL<br>Cast: Pretty Law, Cornelius Seth</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -165,7 +165,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="toy story.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\toy story.jpg">
  <div class="r" style="color: red">TOY STORY</div>
  <div class="p">A man is living a lavish life with his family, he has all the things he want. One day a storng storm came and wiped everything he had, together with his family now he is lonely.<br>Duration: 1hr 15mins<br>PG: Family<br>Cast: Mark Trim, Justin Timberlake</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -173,7 +173,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="smurfs.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\smurfs.jpg">
  <div class="r" style="color: red">SMURFS</div>
  <div class="p">Smurfs are travellers who go around exploring the world. This time around they went to an Island with amazing waterfalls and flowers, now they do not want to comeback.<br>Duration: 1hr 40mins<br>PG: Family<br>Cast: Darren Green, Glory Lupa</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -181,7 +181,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="porcupines.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\porcupines.jpg">
  <div class="r" style="color: red">MINIONS</div>
  <div class="p">Dancing and singing is their culture. Porcupines form a group of their own which they dance and sing, they join a concert and they evolved the winners by their immense talent.<br>Duration: 2hrs 15mins<br>PG: Family<br>Cast: Ezra Nick, Nicholas Cage</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -189,7 +189,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="pixar.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\pixar.jpg">
  <div class="r" style="color: red">INCREDIBLES</div>
  <div class="p">A family with superpowers saves the town against an evil vilian, who wanted to take and kill all babies newlyborn. So they use their powers to overcome the villian.<br>Duration: 1hr 45mins<br>PG: 13VL<br>Cast: Nelson Adobe, Brian Potter</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -197,7 +197,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="boy.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\boy.jpg">
  <div class="r" style="color: red">COMPOUND</div>
  <div class="p">A group of teens break into a long abonded compound and they find a basement. U pon opening the basement, they found a set of toys warpped and they took all of them.<br>Duration: 1hr 03mins<br>PG: Family<br>Cast: Liam Nick, Jackson Roger</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -205,7 +205,7 @@ li.dropdown {
  </div>
  
  <div class="amination">
- <img src="breadwinner.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\breadwinner.jpg">
  <div class="r" style="color: red">BOSS BABY</div>
  <div class="p">A young baby is too bossy, he wants to control his brother and sisters over everything. His brother gets annoyed by him but there is nothing he can do as parents said he cannot be beaten<br>Duration: 2hrs 35mins<br>PG: 13L<br>Cast: Rema Cooper, Lee Jackson</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -236,12 +236,12 @@ li.dropdown {
 <footer>
 <ul>
 <li>
- <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
-  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
-  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
-  <a href="https://twitter.com/Eagles Movie Cinema"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
-  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
-  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
+ <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
+  <a href="https://twitter.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
+  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
     <p style="color: red;">Created and Managed by Batsho Kgosietsile Tabona<br>COPYRIGHTS@Eagles Movie Cinema<br>20 February 2020</br></p>
    <p style="color: red;">Call and Book us on:<br>+267 76285635<br>+267 35156<br>+267 32985<br>We are number one providing cinema</br></p>
    </li>
