--- a/action.html
+++ b/action.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="/C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\favicon.png">
+  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png">
 <style>
 
 body {
@@ -123,8 +123,8 @@ li.dropdown {
  </form>
  
  <ul>
-  <li><a href="movies theatre.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
-  <li><a href="index.html" class="active">Home</a></li>
+  <li><a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="movies theatre.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
   <a href="movies theatre.html" class="dropbtn">Genre</a>
@@ -142,7 +142,7 @@ li.dropdown {
 <div class="container">
 
 <div class="action">
-<img src="bad boys.jpg">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\bad boys.jpg">
 <div class="r" style="color: red">BAD BOYS</div>
 <div class="p">Undercover cops are dealing with a notorious gang who seals drugs for a living and kill people. The undercover cops are willing to catch them so they pay for their crimes<br>Duration: 2hrs 15mins<br>PG: 16VL<br>Cast: Martin Lawrence, Will Smith</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -150,7 +150,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="Americans.jpg">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\Americans.jpg">
 <div class="r" style="color: red">EXTRACTION</div>
 <div class="p">A spy is sent to go and gather informantion in Uganda. Things takes a bad turn when he is realised and now he is been wanted by the government of Uganda and he is all by himself.<br>Duration: 1hr 59mins<br>PG: 16VL<br>Cast: Wesley Sniper, Eddie Moore</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -158,7 +158,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="hobbs and shaw.jpg">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\hobbs and shaw.jpg">
 <div class="r" style="color: red">HOBBS AND SHAW</div>
 <div class="p">A man whose daughter has been kidnapped, teams up with his friend to hunt down the kidnappers and bring back his daughter. They start hunting them one by one.<br>Duration: 2hrs 15mins<br>PG: 16VL<br>Cast: Dave Johnson, Jason Statham</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -166,7 +166,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="warzone.jpg">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\warzone.jpg">
 <div class="r" style="color: red">THE VIETNAM WAR</div>
 <div class="p">Jason Statham comes again in this thrilling movie as navy who is sent to the warzone heading 200 armies. They fight for liberty of their country.<br>Duration: 2hrs mins<br>PG: 16SNL<br>Cast: Jason Statham, Denzel Washington</br></div>
 <a href="Payment.html"><button>BUY TICKET</button</a>
@@ -174,7 +174,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="sentinelle.jpg">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\sentinelle.jpg">
 <div class="r" style="color: red">SENTINELLE</div>
 <div class="p">A young woman is sent to the navy by her grandparents and now she face a huge mission of peacekeeping between China and Russia. Will she succeed?<br>Duration: 1hr 56mins<br>PG: 16VL<br>Cast: Queen Right, Billy Moore</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -182,7 +182,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="spiderman.jpg">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\spiderman.jpg">
 <div class="r" style="color: red">SPIDERMAN</div>
 <div class="p">A superhuman is given a task to save people against an evil villian who destroys the city and hold people as hostages. Spiderman is willing to die for his people.<br>Duration: 2hrs 35mins<br>PG: 13L<br>Cast: Andy Moore, Frank Hunk</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -190,7 +190,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="terminator 5.jpg">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\terminator 5.jpg">
 <div class="r" style="color: red">TERMINATOR 5</div>
 <div class="p">Arnold Schwarzenegger comes as a built machine who fights agaisnt corruption caused by the army to kill all first borns.He does this to protect his family.<br>Duration: 2hrs 45mins<br>PG: 16VL<br>Cast: Arnold Schwarzenegger, Bruce Wills</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -198,7 +198,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="skyscrapper.jpg">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\skyscrapper.jpg">
 <div class="r" style="color: red">SKYSCRAPPER</div>
 <div class="p">Dave Johnson returns again as a firefighter who tries to save his family against disasters of nature which resulted in destroying the whole city of Texas.<br>Duration: 1hr 28mins<br>PG: 18L<br>Cast: Dave Johnson, Katy Perry</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -206,7 +206,7 @@ li.dropdown {
 </div>
 
 <div class="action">
-<img src="tears of the sun.jpg">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\tears of the sun.jpg">
 <div class="r" style="color: red">TEARS OF THE SUN</div>
 <div class="p">Bruce Wills heads an army of soldiers who are in the quest of saving people in Somalia against a group of terrorists who want to take down the city and owne everything.<br>Duration: 2hrs 45mins<br>PG: 16SNL<br>Cast: Bruce Wills, Eddie Law</br></div>
 <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -237,12 +237,12 @@ li.dropdown {
 <footer>
 <ul>
 <li>
- <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
-  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
-  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
-  <a href="https://twitter.com/Eagles Movie Cinema"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
-  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
-  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
+ <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
+  <a href="https://twitter.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
+  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
     <p style="color: red;">Created and Managed by Batsho Kgosietsile Tabona<br>COPYRIGHTS@Eagles Movie Cinema<br>20 February 2020</br></p>
    <p style="color: red;">Call and Book us on:<br>+267 76285635<br>+267 35156<br>+267 32985<br>We are number one providing cinema</br></p>
    </li>
