--- a/horror page.html
+++ b/horror page.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="/C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\favicon.png">
+  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png">
 <style>
 
 body {
@@ -130,7 +130,7 @@ footer
  </form>
  
  <ul>
-  <li><a href="movies theatre.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="movies theatre.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
   <li><a href="index.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
@@ -149,7 +149,7 @@ footer
 <div class="container">
  
  <div class="horror">
- <img src="chucky.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\chucky.jpg">
  <div class="r" style="color: red">CHUCKY</div>
  <div class="p">Chucky is hyponotizing doll which goes about killing children. It awakes at night and it stab the children with a sharp object.<br>Duration: 1hr 5mins<br>PG: 18VL<br>Cast: Earling Sydney, Armstorng Que</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -157,7 +157,7 @@ footer
  </div>
  
  <div class="horror">
- <img src="countdown.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\countdown.jpg">
  <div class="r" style="color: red">COUNTDOWN</div>
  <div class="p">People in New York downloaded an app which counts down how long they will live and if you reach your count down you will be killed.<br>Duration: 2hrs 15mins<br>PG: 18SNVL<br>Cast: Mason Dier, Tom Eggers</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -165,7 +165,7 @@ footer
  </div>
  
  <div class="horror">
- <img src="dead silence.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\dead silence.jpg">
  <div class="r" style="color: red">CONTAGION</div>
  <div class="p">A doctor develops a new virus which kills people if they breathe it. He spreads it out in the country and it wipes people by tearing their stomach apart.<br>Duration: 1hr 50mins<br>PG: 13SNL<br>Cast: Eddie Murphy, Ashley Opera</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -173,7 +173,7 @@ footer
  </div>
  
  <div class="horror">
- <img src="scream.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\scream.jpg">
  <div class="r" style="color: red">SCREAM</div>
  <div class="p">A high school teacher who has been fired, starts to hunt down schoolkids and kill them. He seeks revenge through killing them.<br>Duration: 1hr 35mins<br>PG: 18SVL<br>Cast: Tom Halland, Kevin Hurt</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -181,7 +181,7 @@ footer
  </div>
  
  <div class="horror">
- <img src="annabela.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\annabela.jpg">
  <div class="r" style="color: red">ANNABELLE</div>
  <div class="p">Lucia is a kid who is possesed with the evil spirits, she drinks blood for her survival. She starts preying people and drink their blood.<br>Duration: 2hrs<br>PG: 18VL<br>Cast: Sidney Leak, Big Smalls</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -189,7 +189,7 @@ footer
  </div>
  
  <div class="horror">
- <img src="vampires.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\vampires.jpg">
  <div class="r" style="color: red">VAMPIRES</div>
  <div class="p">Inspired by vampire dairies, a group of vampiries invade a town and start feeding their cravings for a living by drinking people's blood.<br>Duration: 1hr 15mins<br>PG: 16L<br>Cast: Billy Latie, Whitney White</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -197,7 +197,7 @@ footer
  </div>
  
  <div class="horror">
- <img src="the nun.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\the nun.jpg">
  <div class="r" style="color: red">THE NUN</div>
  <div class="p">A church is falling apart as nuns start worshipping the devil and killing people for power increament. One priest is devoted to wipe out the evil spirit and starts fighting the nuns.<br>Duration: 2hrs 25mins<br>PG: 16L<br>Cast:Morty Harther, Mike Azas</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -205,7 +205,7 @@ footer
  </div>
  
  <div class="horror">
- <img src="the prodigy.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\the prodigy.jpg">
  <div class="r" style="color: red">GHOST RIDER</div>
  <div class="p">A child is born as a half human and a half ghost. It takes turns when the ghost part starts to control him and he kills people.<br>Duration: 2hrs 20mins<br>PG: 18SNVL<br>Cast: Pearl Shike, Patrick Arise</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -213,7 +213,7 @@ footer
  </div>
  
  <div class="horror">
- <img src="12 eyes.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\12 eyes.jpg">
  <div class="r" style="color: red">HALLOWEEN</div>
  <div class="p">A young man starts to grows pins all over the body and his family abondons him. He starts kidnapping kids and kills them with the pins.<br>Duration: 1hr 40mins<br>PG: 18SNL<br>Cast: David Livingstone, Arthur Viking</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -245,12 +245,12 @@ footer
 <footer>
 <ul>
 <li>
- <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
-  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
-  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
-  <a href="https://twitter.com/Eagles Movie Cinema"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
-  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
-  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
+ <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
+  <a href="https://twitter.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
+  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
     <p style="color: red;">Created and Managed by Batsho Kgosietsile Tabona<br>COPYRIGHTS@Eagles Movie Cinema<br>20 February 2020</br></p>
    <p style="color: red;">Call and Book us on:<br>+267 76285635<br>+267 35156<br>+267 32985<br>We are number one providing cinema</br></p>
    </li>
