--- a/latest page.html
+++ b/latest page.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="/C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\favicon.png">
+  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png">
 <style>
 
 body {
@@ -124,8 +124,8 @@ li.dropdown {
  </form>
  
  <ul>
-  <li><a href="movies theatre.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
-  <li><a href="index.html" class="active">Home</a></li>
+  <li><a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="movies theatre.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
   <a href="movies theatre.html" class="dropbtn">Genre</a>
@@ -143,7 +143,7 @@ li.dropdown {
 <div class="container">
 
  <div class="latest">
- <img src="12 strong.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\12 strong.jpg">
  <div class="r" style="color: red">12 STONG</div>
  <div class="p">A group of army on a peacekeeping mission which they should have two countries fighting to agree on terms and stop fighting.<br>Duration: 2Hrs<br>PG: 13L<br>Cast: Whitney Smalls, Eddie Murphy<br>Genre: War Movie</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -151,7 +151,7 @@ li.dropdown {
  </div>
  
   <div class="latest">
- <img src="zootopia.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\zootopia.jpg">
  <div class="r" style="color: red">LADYBUG</div>
  <div class="p">A young boy and a girl have superpowers and they have to use them to protect their loved ones against evill heroes without being noticed.<br>Duration: 1Hr 15mins<br>PG: Family<br>Cast: Brian Mark, Adam Tool<br>Genre: Amination Movie</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -161,7 +161,7 @@ li.dropdown {
  
  
   <div class="latest">
- <img src="wrong turn.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\wrong turn.jpg">
  <div class="r" style="color: red">THE WITCHER</div>
  <div class="p">Witches a real, in this movie we see a mother sacrificing her unborn baby to the witches for riches. Now she must sacrife more people for more riches.<br>Duration: 2Hrs 30mins<br>PG: 18SNL<br>Cast: Queen Law, Letty Strong<br>Genre: Horror Movie</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -170,7 +170,7 @@ li.dropdown {
  
  
   <div class="latest">
- <img src="bang bang.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\bang bang.jpg">
  <div class="r" style="color: red">INTEROGATION</div>
  <div class="p">Cops must team together despite their differences in the past. They have a mission to catch one of the most biggest drug cartel(LOO BARE). Will they succeed.<br>Duration: 2Hrs 45mins<br>PG: 13L<br>Cast: Mike Lawrence, Darren Adams<br>Genre: Action, Comedy Movie</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -179,7 +179,7 @@ li.dropdown {
  
  
   <div class="latest">
- <img src="aquaman 2.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\aquaman 2.jpg">
  <div class="r" style="color: red">AQUAMAN 2</div>
  <div class="p">A man is sent to the battleground to fight for his life after he betrayed the queen. He hides and plans to run away from the battleground but they are guards eveywhere.<br>Duration: 2Hrs 37mins<br>PG: 16VL<br>Cast: Seth King, Violet Adams<br>Genre: Action Movie</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -187,7 +187,7 @@ li.dropdown {
  </div>
  
   <div class="latest">
- <img src="ben 10.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\ben 10.jpg">
  <div class="r" style="color: red">BEN 10</div>
  <div class="p">A young boy picks a watch from the streets and the watch contains superpowers. Upon wearing the watch and selecting the hero he wanted, he changed to the hero and he became happy.<br>Duration: 2hrs 30mins<br>PG: 13L<br>Cast: Ben White, Florence Moore<br>Genre: Amination, Action Movie</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -196,7 +196,7 @@ li.dropdown {
  
  
   <div class="latest">
- <img src="scary.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\scary.jpg">
  <div class="r" style="color: red">MASK</div>
  <div class="p">A man picks a mask from the river and weared it, it changed him into something scary and it wasn't able to come out.Now he has to live with the mask his whole life.<br>Duration: 1Hr 45mins<br>PG: 18SNVL<br>Cast: Frank Joe, Jason Statham<br>Genre: Horror Movie</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -206,7 +206,7 @@ li.dropdown {
  
  
   <div class="latest">
- <img src="smalls.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\smalls.jpg">
  <div class="r" style="color: red">BIG OWL</div>
  <div class="p">Biggest owl and ostrich have been stranded in the city full of people who want to kill and eat them. How will they escape the city with over two thousand people who are hungry for meat.<br>Duration: 2Hrs<br>PG: Family<br>Cast: Troy Robsion, Adam Moore<br>Genre: Amination, Comedy</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -215,7 +215,7 @@ li.dropdown {
  
  
   <div class="latest">
- <img src="grudge.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\grudge.jpg">
  <div class="r" style="color: red">GRUDGE</div>
  <div class="p">A child grows up holding a grudge against his father who raped her while she was 16 years. Now she is grown, she wants to take revenge against men and she starts hunting them down.<br>Duration: 2Hrs<br>PG: 16SNVL<br>Cast: Seth Moore, Azania Petty<br>Genre: Horror Movie</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -223,7 +223,7 @@ li.dropdown {
  </div>
  
   <div class="latest">
- <img src="assignment.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\assignment.jpg">
  <div class="r" style="color: red">AASIGNMENT</div>
  <div class="p">Killing is their passion. Two guys are sent on a mission to protect the city against aliens who want to take and own the city. Will they be able to keep them oof the city?<br>Duration: 2Hrs 35mins<br>PG: 16L<br>Cast: Lee Troy, Mike Hudson<br>Genre: Action, Romance Movie</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -232,7 +232,7 @@ li.dropdown {
 
 
  <div class="latest">
- <img src="monkey.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\monkey.jpg">
  <div class="r" style="color: red">THE MONKEY KING</div>
  <div class="p">A monkey is trying to save his family from terrorist who want to kidnap his family. We will he be able to save them.<br>Duration: 1Hr 30mins<br>PG: 16VL<br>Cast: Adam Lee, Sofia White</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -241,7 +241,7 @@ li.dropdown {
  
 
  <div class="latest">
- <img src="saw.jpg">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\saw.jpg">
  <div class="r" style="color: red">SAW</div>
  <div class="p">Innocent man wakes up in his dreams as serial killer and starting killing people. He is at a large, police are looking for him.<br>Duraion: 2Hrs 35mins<br>PG: 18SNVL<br>Cast: John Terry , Michael Liam</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
@@ -268,12 +268,12 @@ li.dropdown {
 <footer>
 <ul>
 <li>
- <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
-  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
-  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
-  <a href="https://twitter.com/Eagles Movie Cinema"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
-  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
-  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
+ <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
+  <a href="https://twitter.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
+  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
     <p style="color: red;">Created and Managed by Batsho Kgosietsile Tabona<br>COPYRIGHTS@Eagles Movie Cinema<br>20 February 2020</br></p>
    <p style="color: red;">Call and Book us on:<br>+267 76285635<br>+267 35156<br>+267 32985<br>We are number one providing cinema</br></p>
    </li>
