--- a/FeedBack.html
+++ b/FeedBack.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="/C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\favicon.png">
+  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png">
 <style>
 body{
  background: linear-gradient(to left ,black -38%, black 100%);
@@ -126,14 +126,14 @@ float: left;
 <a href="Payment.html" class="active">Buy Tickets</a>
 </div>
 
-<form class="image" action="movies threatre.html">
+<form class="image" action="FeedBack.html">
  <input type="text" placeholder="Search movies.." name="search">
  <button type="submit"><i class="fa fa-search"></i></button>
  </form>
  
  <ul>
-  <li><a href="movies theatre.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
-  <li><a href="index.html" class="active">Home</a></li>
+  <li><a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="movies theatre.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
   <a href="" class="dropbtn">Genre</a>
@@ -154,7 +154,7 @@ float: left;
 <div class="person">
 
 <div class="card">
-<img src="person.png">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\person.png">
 <div class="container">
 <h1>FRANK EDDIE FROM NAMIBIA</h1>
 <p>I have been to Eagles Movie Cinema in Botswana it is such a welcoming place.I bought the ticket online and the website is very easy to use.</p>
@@ -162,7 +162,7 @@ float: left;
 </div>
 
 <div class="card">
-<img src="person.png">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\person.png">
 <div class="container">
 <h1>LIONEL ADAMS FROM SWAZILAND</h1>
 <p>I wasn't happy with the food services from the Cinema but all in all they provide five-star treatment and the website is very comfortable.</p>
@@ -170,7 +170,7 @@ float: left;
 </div>
 
 <div class="card">
-<img src="person.png">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\person.png">
 <div class="container">
 <h1>NEON WHITE FROM AMERICA</h1>
 <p>I haven't been to Botswana but by the look of the website it seems they offer good quality movies and services.</p>
@@ -178,7 +178,7 @@ float: left;
 </div>
 
 <div class="card">
-<img src="person.png">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\person.png">
 <div class="container">
 <h1>RYAN PICKIE FROM ENGLAND</h1>
 <p> Eagles Movie Cinema website edges me to come to Botswana to come and enjoy their services, it is oe of the best websites i have used..</p>
@@ -186,7 +186,7 @@ float: left;
 </div>
 
 <div class="card">
-<img src="person.png">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\person.png">
 <div class="container">
 <h1>MOHAMMED SINGH FROM EGYPT</h1>
 <p>Here in EGYPT we use the websites oftenly and we hope some day we will come and enjoy the feel of the cinema.</p>
@@ -194,7 +194,7 @@ float: left;
 </div>
 
 <div class="card">
-<img src="person.png">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\person.png">
 <div class="container">
 <h1>AMORE LIAM FROM AUSTRIA</h1>
 <p>Eagles Movie Cinema provides quality movies and services, very pleased of the website also.</p>
@@ -202,7 +202,7 @@ float: left;
 </div>
 
 <div class="card">
-<img src="person.png">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\person.png">
 <div class="container">
 <h1>AMANTLE BROWN FROM BOTSWANA</h1>
 <p>Very pleased by the look and feel of the website Eagles Movie Cinema provides. It is very easy to navigate.</p>
@@ -211,7 +211,7 @@ float: left;
 
 
 <div class="card">
-<img src="person.png">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\person.png">
 <div class="container">
 <h1>OSCAR PETER FROM SOUTH AFRICA</h1>
 <p>Our neighbours have provided with one of the best website one can rely on and i am very pleased may you continue developing it.</p>
@@ -225,7 +225,7 @@ float: left;
 </li>
 
 
-<form action="movies theatre.html" style="right">
+<form action="FeedBack.html" style="right">
   <label for="fname">Full Names:</label><br>
   <input type="text" id="fname" name="fname" value=" "><br>
   <label for="lname">Comments:</label><br>
@@ -249,12 +249,12 @@ float: left;
 <footer>
 <ul>
 <li>
-  <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
-  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
-  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
-  <a href="https://twitter.com/Eagles Movie Cinema"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
-  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
-  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
+  <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
+  <a href="https://twitter.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
+  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
     <p style="color: red;">Created and Managed by Batsho Kgosietsile Tabona<br>COPYRIGHTS@Eagles Movie Cinema<br>20 February 2020</br></p>
    <p style="color: red;">Call and Book us on:<br>+267 76285635<br>+267 35156<br>+267 32985<br>We are number one providing cinema</br></p>
    </li>
