--- a/movies theatre.html
+++ b/movies theatre.html
@@ -1,15 +1,16 @@
 <!DOCTYPE>
-<html lang="eng"
+<html lang="eng">
 <head>
 <title>EAGLES MOVIE CINEMA</title>
-  <link rel="icon" type="image/x-icon" href="/C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\favicon.png">
+  <link rel="icon" type="image/x-icon" href="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png">
 <style>
-body{
- background: linear-gradient(to left ,black -38%, black 100%);
+
+body {
+  background: linear-gradient(to left ,#000 -38%, #000 100%);
             font-family: 'Ubuntu', sans-serif
-			}
-
-
+	}
+	
+/* Style the navigation bar links */
 .navbar a {
   float: right;
   display: block;
@@ -18,10 +19,11 @@ body{
   padding: 0px 20px;
   text-decoration: none;
   }
-  
+     
 form {
 float: right;
 }
+
 
 ul {
   list-style-type: none;
@@ -57,8 +59,9 @@ li.dropdown {
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
-
 
 .dropdown-content a {
   color: black;
@@ -73,105 +76,245 @@ li.dropdown {
 .dropdown:hover .dropdown-content {
   display: block;
 }
-img {
-display : block;
-margin-right :auto;
-margin-left:auto;
-}
-header {
-color:whitesmoke;
-margin-top: 3em;
-}
 
-p {
-color: white;
+.container {
+ max-width: 1200px;
+ margin: auto;
+ overflow: auto;
+ }
+ 
+ .action {
+ margin: 5px;
+ float: left;
+ width: 390px;
+ }
+ 
+.action img {
+ width: 75%;
+ height: 30%;
+ }
+ 
+
+ .p {
+ padding: 5px;
+ text-align: left;
+ color: white;
+ }
+
+.r {
+color: red;
 }
 
 </style>
 </head>
 
 <body>
- 
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  
 <div class="navbar">
 <a href="Payment.html" class="active">Buy Tickets</a>
 </div>
 
-<form class="image" action="movies threatre.html">
+<form class="image" action="Index.html">
  <input type="text" placeholder="Search movies.." name="search">
  <button type="submit"><i class="fa fa-search"></i></button>
  </form>
  
  <ul>
-  <li><a href="movies theatre.html"><img src="favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
-  <li><a href="index.html" class="active">Home</a></li>
+  <li><a href="index.html"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\favicon.png" alt="HOME" width= "20px" height= "20px"></a><li>
+  <li><a href="movies theatre.html" class="active">Home</a></li>
   <li><a href="latest page.html" class="active">Latest</a></li>
   <li class="dropdown">
-  <a href="" class="dropbtn">Genre</a>
+  <a href="Action page.html" class="dropbtn">Genre</a>
   <div class="dropdown-content">
   <a href="Action page.html">Action Movies</a>
   <a href="horror page.html">Horror Movies</a>
   <a href="Amination page.html">Amination Movies</a>
-  </li>
-  </div>
-  <li><a href="Contact Us.html">Contact Us</a></li>
+   </li>
+   <li><a href="Contact Us.html">Contact Us</a></li>
   <li><a href="FeedBack.html">FeedBack</a></li>
   </ul>
-
-
-<a href="movies theatre.html"><img src="favicon.png" alt="HOME" width= "50px" height= "50px"></a>
-<p style="text-align:center;"><a href="Index.html">EAGLES MOVIE CINEMA</a></p>
+</div>
 <hr>
-</hr>
-<header>
-<h1>What is Eagles Movie Cinema?</h1>
-<p> Eagles Movie Cinema is a cinema which provides quality,certified movies and tv shows,.You can watch purchase a ticket online and come to our cinema! We provide number one movies and service in Botswana.
-It is a flexible website,it can be reached on smartphones and it is ad free.<br>With Eagles Movie Cinema all you need is a computer with access to internet connection and HTML browser and be able to buy tickets and see movies provided.There are no softwares or hardware required and the movies they are legally obtained copies from manufacturers.</br></p>
 
-<h2>ACCOUNT REQUIRED?</h2>
-<p>No account is required in order to watch our movies, this is to help people not to reveal their information.What one need is to buy a ticket and secure a spot in our cinema.</p>
+<h1 style="color:red;">POPULAR MOVIES;</h1>
 
-<h3> HD QUALITY?</h3>  
-<p> We provide high definition quality movies</p>
+<div class="container">
 
-<h4>CONTENT?</h4>
-<p>One may ask,will i be able to find the movie i want? We Eagles Movie Cinema we provide all movies published and we are one step ahead of other cinema's.Just search what movie you want and it will pop out.</p>
+<div class="action">
+<img src ="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\rango.jpg">
+<div class="r" style="color: red">RANGO</div>
+<div class="p">Genre: Amination, Comedy Movie</div>
+<a href="Payment.html"><button>BUY TICKET</button></a>
+ <a href=""><button>WATCH TRAILER</button></a>
+</div>
+
+<div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\chucky.jpg">
+ <div class="r">CHUCKY</div>
+ <div class="p">Genre: Horror Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+  <a href=""><button>WATCH TRAILER</button></a>
+ </div>
+
+
+<div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\Americans.jpg">
+ <div class="r">EXTRACTION</div>
+ <div class="p">Genre: Action, War Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+ <a href=""><button>WATCH TRAILER</button></a>
+ </div>
  
-<h5>ADS EXPERIENCE?</h5>
-<p>Our website is ad free and one can strolling in it without having to deal with any ads popping out.</p> 
-    </header>
-	
-<p style="text-align:center;"><a href="Index.html"> GO TO EAGLES MOVIE CINEMA</a></p>
+ <div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\scream.jpg">
+ <div class="r">SCREAM</div>
+ <div class="p">Genre: Horror, Comedy Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+  <a href=""><button>WATCH TRAILER</button></a>
+ </div>
+ 
+ <div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\sentinelle.jpg">
+ <div class="r">SENTINELLE</div>
+ <div class="p">Genre: Action, War Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+  <a href=""><button>WATCH TRAILER</button></a>
+ </div>
+ 
+ <div class="action">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\panther.jpg">
+<div class="r">THE TEST</div>
+<div class="p">Genre: Amination Movie</div>
+<a href="Payment.html"><button>BUY TICKET</button></a>
+ <a href=""><button>WATCH TRAILER</button></a>
+</div>
+</div>
+
+<h2 style="color:red">MOVIES YOU MAY LIKE;</h2>
+
+<div class="container">
+
+<div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\kung fu panda.jpg">
+ <div class="r">KUNG FU PANDA</div>
+ <div class="p">Genre: Amination, Action Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+  <a href="https://www.youtube.com/watch?v=PXi3Mv6KMzY"><button>WATCH TRAILER</button></a>
+ </div>
+
+ <div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\haunted house.jpg">
+ <div class="r">HAUNTED HOUSE</div>
+ <div class="p">Genre: Horror Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+  <a href="https://youtu.be/VxEEGi9V0kI"><button>WATCH TRAILER</button></a>
+ </div>
+
+<div class="action">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\moana.jpg">
+<div class="r">MOANA</div>
+<div class="p">Genre: Amination, Comedy Movie</div>
+<a href="Payment.html"><button>BUY TICKET</button></a>
+<a href="https://www.youtube.com/watch?v=LKFuXETZUsI"><button>WATCH TRAILER</button></a>
+</div>
+
+<div class="action">
+<img src ="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\suicide squad.jpg">
+<div class="r">SUICIDE SQUAD</div>
+<div class="p">Genre: Action, Romance Movie</div>
+<a href="Payment.html"><button>BUY TICKET</button></a>
+<a href="https://www.youtube.com/watch?v=CmRih_VtVAs"><button>WATCH TRAILER</button></a>
+</div>
+
+ <div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\annabela.jpg">
+ <div class="r">ANNABELLE</div>
+ <div class="p">Genre: Horror, Thriller Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+ <a href="https://youtu.be/paFgQNPGlsg"><button>WATCH TRAILER</button></a>
+ </div>
+
+<div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\tears of the sun.jpg">
+ <div class="r">TEARS OF THE SUN</div>
+ <div class="p">Genre: War Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+ <a href="https://www.youtube.com/watch?v=INW4f3yyeZg"><button>WATCH TRAILER</button></a>
+ </div>
+</div>
+
+<h3 style="color:red;">MOST SEARCHED MOVIES;</h3>
+
+<div class="container">
+
+<div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\sniper.jpg">
+ <div class="r">DOG</div>
+ <div class="p">Genre: Amination, Comedy Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+  <a href="https://www.youtube.com/watch?v=JeuoUHn9Cfg"><button>WATCH TRAILER</button></a>
+ </div>
+ 
+ <div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\the nun.jpg">
+ <div class="r">THE NUN</div>
+ <div class="p">Genre: Horror Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+  <a href="https://youtu.be/G7kORFktHnM"><button>WATCH TRAILER</button></a>
+ </div>
+ 
+ <div class="action">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\black widow.jpg">
+<div class="r">BLACK WIDOW</div>
+<div class="p">Genre: Action Movie</div>
+<a href="Payment.html"><button>BUY TICKET</button></a>
+ <a href="https://www.youtube.com/watch?v=ybji16u608U"><button>WATCH TRAILER</button></a>
+</div>
+
+ <div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\invincible.jpg">
+ <div class="r">INVINCIBLE</div>
+ <div class="p">Genre: Horror Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+  <a href="https://www.youtube.com/watch?v=zaDclp6Fyjc"><button>WATCH TRAILER</button></a>
+ </div>
+ 
+ <div class="action">
+<img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\flint.jpg">
+<div class="r">FLINT</div>
+<div class="p">Genre: Action, Thriller Movie</div>
+<a href="Payment.html"><button>BUY TICKET</button></a>
+ <a href="https://www.youtube.com/watch?v=dT-Jx3dvMu0"><button>WATCH TRAILER</button></a>
+</div>
+
+
+<div class="action">
+ <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\rena.jpg">
+ <div class="r">BRIDGE OF SPIRITS</div>
+ <div class="p">Genre: Amination Movie</div>
+ <a href="Payment.html"><button>BUY TICKET</button></a>
+  <a href="https://youtu.be/pWh5388AEHw"><button>WATCH TRAILER</button></a>
+ </div>
+</div>
+</hr>
 </body>
 
 <hr>
-
-<header style="float: right; color: white">
-<h2>MOVIE PRICES</h2>                   
-<p><b>ALL ACTION MOVIES COST P55.00 PER MOVIE</b></p>
-<p><b>ALL HORROR MOVIES COST P45.00 PER MOVIE</b></p>
-<p><b>ALL AMINATION MOVIES COST P60.00 PER MOVIE</b></p>
- 
- <h3>FOOD PRICES</h3> 
- <p><b>POPCORNS WITH FLAVOURED DRINK COST P100.00</b></p>
- <p><b>RICE AND CHICKEN COST P150.00</b></p>
- <p><b>DRINKS COST P35.00</b></p>
- </header>
-
 <footer>
 <ul>
 <li>
- <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
-  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
-  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
-  <a href="https://twitter.com/Eagles Movie Cinema"><img src="twitter.png" alt="twitter" width="50px" height="30px"></a>
-  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="instagram.jpg" alt="instagram" width="50px" height="30px"></a>
-  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="youtube.png" alt="youtube" width="50px" height="30px"></a>
+ <a href="https://www.facebook.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\facebook.jpg" alt="Facebook" width= "50px" height= "30px"></a>
+  <a href="https://wa.me/+26776285635/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\whatsapp.jpg" alt="whatsapp" width="50px" height="30px"></a>
+  <a href="mailto:tabonabatsho1@gmail.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\g-mail.png" alt="E-mail" width "50px" height= "30px"></a>
+  <a href="https://twitter.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\twitter.png" alt="twitter" width="50px" height="30px"></a>
+  <a href="https://www.instagram.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\instagram.jpg" alt="instagram" width="50px" height="30px"></a>
+  <a href="https://www.youtube.com/Eagles Movie Cinema"><img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\youtube.png" alt="youtube" width="50px" height="30px"></a>
     <p style="color: red;">Created and Managed by Batsho Kgosietsile Tabona<br>COPYRIGHTS@Eagles Movie Cinema<br>20 February 2020</br></p>
    <p style="color: red;">Call and Book us on:<br>+267 76285635<br>+267 35156<br>+267 32985<br>We are number one providing cinema</br></p>
    </li>
    </ul>
-   </footer>
-</hr>   
+   </footer>  
+   </hr>
 </html>
