--- a/Amination page.html
+++ b/Amination page.html
@@ -141,7 +141,7 @@ li.dropdown {
 <div class="container">
  
  <div class="amination">
- <img src="C:\Users\cse21-107\OneDrive - Botswana Accountancy College\Documents\WMD\images\kung fu panda.jpg">
+ <img src="kung fu panda.jpg">
  <div class="r" style="color: red">KUNG FU PANDA</div>
  <div class="p">Protecting his family against terrorist is the master of Kung, Kung Fu Panda.The master won't let anything bad happen to his family while his is still alive<br>Duration: 1hr 35mins<br>PG: 16L<br>Cast: Smalling Opera, Tom Halland</br></div>
  <a href="Payment.html"><button>BUY TICKET</button></a>
